added small tweaks

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html slang="en">
 <head>
     <meta name="charset">
     <meta name="author" content="Bruno Coimbra - https://github.com/0-l/">
@@ -37,13 +37,7 @@
                 </ul>
                 <div class="pages">
                     <div id="home">
-                        <ul>
-<!--                        <li><a href="https://youtube.com/" target="_blank">youtube</a></li>
-                            <li><a href="https://messenger.com/" target="_blank">messenger</a></li>
-                            <li><a href="https://4chan.org/" target="_blank">4chan</a></li>
-                            <li><a href="https://github.com/" target="_blank">github</a></li>
-                            <li><a href="https://drive.google.com/" target="_blank">drive</a></li> -->
-                        </ul>
+                        <!-- todo: -->
                     </div>
                     <div id="favorites">
                         <ul>
@@ -61,8 +55,7 @@
                         </ul> 
                     </div>
                     <div id="config">
-                        <ul>
-                        </ul>
+                        <!-- todo: change accent color and store it on localstorage -->
                     </div>
                 </div>
             </div>
