added minor improvements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta name="charset">
     <meta name="author" content="Bruno Coimbra - https://github.com/0-l/">
     <meta name="viewport" content="initial-scale=1, user-scalable=no, width=device-width, height=device-height">
+    <link rel="icon" href="https://i.imgur.com/CqXD1im.gif" sizes="16x16 32x32 48x48 150x150" type="image/vnd.microsoft.icon" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>~</title>
 </head>
@@ -29,39 +31,48 @@
                 </div>
             </div>
             <div class="panel">
-                <ul class="tabs">
-                    <li><a href="#home"><i class="material-icons">menu</i></a></li>
-                    <li><a href="#favorites"><i class="material-icons">favorite_border</i></a></li>
-                    <li><a href="#music"><i class="material-icons">headset</i></a></li>
-                    <li><a href="#config"><i class="material-icons">settings</i></a></li>
-                </ul>
-                <div class="pages">
-                    <div id="home">
-                        <!-- todo: -->
-                    </div>
-                    <div id="favorites">
+                <div class="tabs">
+                    <ul class="tab tech">
+                        <i class="material-icons">code</i>
                         <ul>
-                            <li><a href="https://boards.4chan.org/g/" target="_blank">/g/</a></li>
-                            <li><a href="https://lainchan.org/lambda/" target="_blank">/λ/</a></li>
-                            <li><a href="https://8ch.net/tech/" target="_blank">/tech/</a></li>
-                            <li><a href="https://boards.420chan.org/prog/" target="_blank">/prog/</a></li>
-                            <li><a href="https://sushigirl.us/silicon/index.html" target="_blank">/silicon/</a></li>
-                            <li><a href="https://news.ycombinator.com/" target="_blank">Y combinator</a></li>
+                            <a href="" target="_blank"><li>item 1</li></a>
+                            <a href="" target="_blank"><li>item 2</li></a>
+                            <a href="" target="_blank"><li>item 3</li></a>
+                            <a href="" target="_blank"><li>item 4</li></a>
                         </ul>
-                    </div>
-                    <div id="music">
+                    </ul>
+                    <ul class="tab favorites">
+                        <i class="material-icons">favorite_border</i>
                         <ul>
-                            <li><a href="https://soundcloud.com/" target="_blank">soundcloud</a></li>
-                        </ul> 
-                    </div>
-                    <div id="config">
-                        <!-- todo: change accent color and store it on localstorage -->
-                    </div>
+                            <a href="" target="_blank"><li>item 1</li></a>
+                            <a href="" target="_blank"><li>item 2</li></a>
+                            <a href="" target="_blank"><li>item 3</li></a>
+                            <a href="" target="_blank"><li>item 4</li></a>
+                        </ul>
+                    </ul>
+                    <ul class="tab music">
+                        <i class="material-icons">headset</i>
+                        <ul>
+                            <a href="" target="_blank"><li>item 1</li></a>
+                            <a href="" target="_blank"><li>item 2</li></a>
+                            <a href="" target="_blank"><li>item 3</li></a>
+                            <a href="" target="_blank"><li>item 4</li></a>
+                        </ul>
+                    </ul>
+                    <ul class="tab bookmarks">
+                        <i class="material-icons">bookmark_border</i>
+                        <ul>
+                            <a href="" target="_blank"><li>item 1</li></a>
+                            <a href="" target="_blank"><li>item 2</li></a>
+                            <a href="" target="_blank"><li>item 3</li></a>
+                            <a href="" target="_blank"><li>item 4</li></a>
+                        </ul>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="wave"></div>
     <script type="text/javascript" src="js/strftime.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
