added a weather API

--- a/index.html
+++ b/index.html
@@ -25,9 +25,20 @@
                     <p hour></p>
                     <p mins></p>
                     <p ord></p>
+                    <div class="stats">
+                        <div class="date">
+                            <p month>Jan</p>
+                            <p day>21</p>
+                        </div>
+                        <div>
+                            <p description>Sunny</p>
+                            <p location>New York</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="weather">
-                    <p>6&ordm;</p>
+                    <p>0&ordm;</p>
+                    <p weather><i class="material-icons" sunny>wb_sunny</i></p>
                 </div>
             </div>
             <div class="panel">
