added config panel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <title>~</title>
 </head>
 <body>
+    <div class="tools">
+        <button class="open-search"><i class="material-icons">search</i></button>
+        <button class="open-config"><i class="material-icons">settings</i></button>
+    </div>
+    <div class="settings">
+        <div class="config">
+            <button class="close"><i class="material-icons">close</i></button>
+            <h1>Settings</h1>
+            <div class="accent-color">
+                <label>Accent color</label>
+                <input type="text" name="accent">
+            </div>
+            <div class="location">
+                <label>Location</label>
+                <input type="text" name="location">
+            </div>
+        </div>
+    </div>
     <div id="search">
         <div>
             <input type="text" spellcheck="false" placeholder="search">
